# alternator

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.amd  Dockerfile.cpu  Dockerfile.nvidia  Dockerfile.optimized  Dockerfile.runtime-gpu  IMPLEMENTATION_PLAN.md  MIGRATE-TO-WHISPER-CLI.md  README.md  THREAD_ANALYSIS.md  WHISPER_CPU_COMPATIBILITY.md  alternator.toml.example  debug_test  debug_test.rs  deny.toml
.github/: GITHUB_ACTIONS_SETUP.md
.github/workflows/: ci.yml  cleanup.yml  release.yml  security.yml  test-pr.yml
.kiro/specs/mastodon-media-describer/: design.md  requirements.md  tasks.md
scripts/: setup-gpu.sh
src/: backfill.rs  balance.rs  config.rs  error.rs  language.rs  lib.rs  main.rs  mastodon.rs  media.rs  openrouter.rs  toot_handler.rs  whisper.rs  whisper_cli.rs
src/media/: audio.rs  helpers.rs  image.rs  mod.rs  video.rs
src/toot_handler/: coordinator.rs  handler.rs  mod.rs  processor.rs  race.rs  stats.rs
tests/: integration_tests.rs
