[package]
name = "alternator"
version = "0.3.0"
edition = "2021"
rust-version = "1.80.0"
license = "AGPL-3.0"
description = "Automatically adds descriptions to media attachments in Mastodon toots"
repository = "https://github.com/rmoriz/alternator.git"
authors = ["Roland Moriz <roland@moriz.de>"]

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "rustls-tls"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = "0.3"
image = { version = "0.25", features = ["jpeg", "png", "gif", "webp"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
url = "2.5"
base64 = "0.22"
dirs = "5.0"
tempfile = "3.8"
unicode-normalization = "0.1"
async-trait = "0.1"
indicatif = "0.17"

[lib]
name = "alternator"
path = "src/lib.rs"

[dev-dependencies]
async-trait = "0.1"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"